# frankensqlite

./: .gitignore  .gitmodules  .rchignore  .ubsignore  AGENTS.md  ANALYSIS_OF_SPEC_DOC_DIFFS.md  CHANGELOG.md  COMPREHENSIVE_SPEC_FOR_FRANKENSQLITE_V1_CODEX.md  COVERAGE.md  Cargo.toml  E2E_SCENARIO_TRACEABILITY.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  STATE_OF_THE_CODEBASE_AND_NEXT_STEPS.md  _routes.json  check_db.py  corpus_manifest.toml  db300_regime_atlas_contract.toml  debug_viz.py  deny.toml  deploy.sh  deploy_all.sh  deploy_fix.sh  feature_universe_ledger.toml  finalize_viz.py  find_task.py  fix_beads.sh  fix_viz_errors.py  frankentui.css  leapfrog_exit_criteria.toml  levenshtein_bytes.wasm  package-lock.json  package.json  parity_score_contract.toml  parity_taxonomy.toml  playwright.config.ts  progress_bd-1333e.md  progress_bd-1dp9.6.7.8.4.md  progress_bd-1ge41.md  progress_bd-1sf8n.md  (+24 more)
crates/fsqlite/: Cargo.toml  README.md
crates/fsqlite-btree/: Cargo.toml  README.md
crates/fsqlite-btree/proptest-regressions/: cursor.txt
crates/fsqlite-btree/src/: balance.rs  be_tree.rs  btree_invariant_tests.rs  cell.rs  cooling.rs  cracking.rs  cursor.rs  delta_chain.rs  freelist.rs  index_seek_bug_test.rs  instrumentation.rs  interior_delete_test.rs  learned_index.rs  learned_rowid.rs  lib.rs  overflow.rs  payload.rs  quotient_filter.rs  quotient_filter_bench.rs  swiss_index.rs  swizzle.rs  table_seek_bug_test.rs  traits.rs
crates/fsqlite-c-api/: Cargo.toml  README.md
crates/fsqlite-c-api/src/: lib.rs
crates/fsqlite-cli/: Cargo.toml  README.md
crates/fsqlite-cli/src/: main.rs
crates/fsqlite-core/: Cargo.toml  HOT_METADATA_INVENTORY.md  PRIMITIVE_SELECTION_CARDS.md  README.md
crates/fsqlite-core/benches/: prepared_cache_hot_paths.rs  symbol_ops.rs
crates/fsqlite-core/src/: attach.rs  commit_marker.rs  commit_repair.rs  compat_persist.rs  connection.rs  db_fec.rs  decode_proofs.rs  ecs_replication.rs  epoch.rs  explain.rs  inter_object_coding.rs  lib.rs  lrc.rs  native_index.rs  permeation_map.rs  policy_controller.rs  por.rs  quiescence.rs  raptorq_codec.rs  raptorq_integration.rs  region.rs  remote_effects.rs  repair_engine.rs  repair_symbols.rs  replication_receiver.rs  replication_sender.rs  snapshot_shipping.rs  source_block_partition.rs  symbol_log.rs  symbol_size_policy.rs  tiered_storage.rs  transaction.rs  vacuum.rs  wal_adapter.rs  wal_fec_adapter.rs
crates/fsqlite-core/tests/: b4_query_row_indexed_equality.rs  batched_commit_scaling_repro.rs  boundary_duplication_census.rs  cache_staleness_cross_txn_regression.rs  conformance_oracle_ext.rs  conformance_oracle_s55.rs  conformance_oracle_s74b.rs  conformance_oracle_s77.rs  conformance_oracle_s78.rs  conformance_oracle_s79.rs  conformance_oracle_s80.rs  conformance_oracle_s81.rs  conformance_oracle_s83.rs  fast_path_separation.rs  in_exists_regression.rs  planner_join_order_wire.rs  prepared_hit_rate_proof.rs  recursive_cte_perf_repro.rs  self_connection_read_your_own_write_peer_races.rs  ssi_e_process_gate.rs  ssi_e_process_wired.rs  statement_cache_invalidation.rs  track_w_gate.rs  v1_e2e_regression_tests.rs  v2_superinstruction_tests.rs
crates/fsqlite-e2e/: CORRUPTION_DEMO_RUNBOOK.md  Cargo.toml  HARNESS.md  METHODOLOGY.md  README.md  RUNBOOK.md  RUNNING_THE_E2E_SUITE.md  SEED_MANIFEST.md  TROUBLESHOOTING.md
crates/fsqlite-e2e/benches/: concurrent_write_bench.rs  concurrent_write_persistent_bench.rs  e2e_bench.rs  large_txn_bench.rs  mixed_oltp_bench.rs  operation_baseline_bench.rs  read_heavy_bench.rs  write_throughput_bench.rs
crates/fsqlite-e2e/src/: baseline.rs  batch_runner.rs  beads_benchmark_campaign.rs  bench_summary.rs  benchmark.rs  benchmark_metadata.rs  canonicalize.rs  ci_artifacts.rs  ci_smoke.rs  comparison.rs  concurrency_showcase.rs  corruption.rs  corruption_demo_sqlite.rs  corruption_scenarios.rs  corruption_walkthrough.rs  executor.rs  failure_bundle.rs  fairness.rs  fixture_metadata.rs  fixture_select.rs  fsqlite_baseline.rs  fsqlite_executor.rs  fsqlite_recovery_demo.rs  golden.rs  lib.rs  logging.rs  methodology.rs  mismatch_artifacts.rs  oplog.rs  overlay_honesty_gate.rs  perf_runner.rs  persistent_phase_audit.rs  recording.rs  recovery_demo.rs  recovery_runner.rs  report.rs  report_render.rs  run_workspace.rs  smoke.rs  sqlite3_baseline.rs  (+4 more)
crates/fsqlite-e2e/tests/: bd_1dp9_6_7_8_2_incremental_wal_refresh.rs  bd_1lsfu_1_generate_baseline.rs  bd_1lsfu_1_operation_baselines.rs  bd_1r0ha_3_concurrent_writer_e2e.rs  bd_1rw_3_jit_hot_query_replay.rs  bd_2wt_2_aggregate_window_engine.rs  bd_2y306_2_chain_length_controls.rs  bd_2y306_4_chain_memory_benchmarks.rs  bd_2yqp6_6_1_ssi_serialization_anomaly_differential.rs  bd_2yqp6_6_2_busy_retry_error_semantics_matrix.rs  bd_2yqp6_6_3_crash_recovery_corruption_matrix.rs  bd_2yqp6_6_5_concurrent_mode_defaults.rs  bd_3plop_6_raptorq_self_healing.rs  (+37 more)
crates/fsqlite-ext-fts3/: Cargo.toml  README.md
crates/fsqlite-ext-fts5/: Cargo.toml  README.md  SHADOW_BACKED_FTS5_CONTRACT_MATRIX.md  SHADOW_BACKED_FTS5_PROOF_ARTIFACT_CONTRACT.md  SHADOW_BACKED_FTS5_TARGET_ARCHITECTURE.md
crates/fsqlite-ext-json/: Cargo.toml  README.md
crates/fsqlite-ext-misc/: Cargo.toml  README.md
crates/fsqlite-ext-rtree/: Cargo.toml  README.md
crates/fsqlite-ext-session/: Cargo.toml  README.md
crates/fsqlite-func/: Cargo.toml  README.md
crates/fsqlite-harness/: Cargo.toml  README.md
crates/fsqlite-mvcc/: Cargo.toml  README.md
crates/fsqlite-observability/: Cargo.toml  README.md
crates/fsqlite-pager/: Cargo.toml  README.md
crates/fsqlite-parser/: Cargo.toml  README.md
crates/fsqlite-planner/: Cargo.toml  README.md
crates/fsqlite-types/: Cargo.toml  README.md
crates/fsqlite-vdbe/: Cargo.toml  DECODE_SCRATCH_OWNERSHIP.md  README.md
crates/fsqlite-vfs/: Cargo.toml  README.md
crates/fsqlite-wal/: Cargo.toml  FAULT_MATRIX_BATCHED_APPEND_PUBLISH.md  README.md
crates/fsqlite-wasm/: Cargo.toml  README.md
fuzz/: .gitkeep  Cargo.toml
fuzz/fuzz_targets/: fuzz_expr_parser.rs  fuzz_lexer.rs  fuzz_record_roundtrip.rs  fuzz_sql_parser.rs
(+1466 files in other folders)
