[package]
name = "fsqlite-btree"
version = "0.1.1"
description = "B-tree storage engine"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { path = "../fsqlite-types", version = "0.1" }
fsqlite-error = { workspace = true }
fsqlite-pager = { workspace = true }
tracing = { workspace = true }
hashbrown = { workspace = true }
foldhash = "0.2.0"

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
