[package]
name = "fsqlite-btree"
version = "0.1.2"
description = "B-tree storage engine"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["native"]
native = ["fsqlite-pager/native"]
wasm = ["fsqlite-pager/wasm"]

[dependencies]
fsqlite-types = { path = "../fsqlite-types", version = "0.1", default-features = false }
fsqlite-error = { workspace = true }
fsqlite-pager = { version = "0.1.2", path = "../fsqlite-pager", default-features = false }
tracing = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true }
foldhash = "0.2.0"

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
