[package]
name = "fsqlite-btree"
version = "0.1.3"
description = "B-tree storage engine"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["native"]
native = ["fsqlite-pager/native"]
wasm = ["fsqlite-pager/wasm"]

[dependencies]
fsqlite-types = { path = "../fsqlite-types", version = "0.1.3", default-features = false }
fsqlite-error = { workspace = true }
fsqlite-func = { workspace = true }
fsqlite-pager = { version = "0.1.3", path = "../fsqlite-pager", default-features = false }
tracing = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true }
foldhash = "0.2.0"
smallvec = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
