[package]
name = "fsqlite-c-api"
version = "0.1.1"
description = "SQLite C API compatibility shim for drop-in replacement"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
fsqlite = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-types = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

# Cannot inherit workspace lints because workspace forbids unsafe_code
# and FFI requires unsafe at the boundary.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cast_precision_loss = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
uninlined_format_args = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
