[package]
name = "fsqlite-cli"
version = "0.1.1"
description = "Interactive SQL shell"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "fsqlite"
path = "src/main.rs"

[features]
default = []

[dependencies]
fsqlite = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-core = { workspace = true }
fsqlite-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
