[package]
name = "fsqlite-core"
version = "0.1.1"
description = "Core engine: connection, prepare, schema, DDL/DML codegen"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["native", "linux-asupersync-uring"]
native = ["fsqlite-types/native", "fsqlite-vfs/native"]
wasm = ["fsqlite-types/wasm", "fsqlite-vfs/wasm"]
linux-asupersync-uring = ["native", "fsqlite-vfs/linux-asupersync-uring"]

[dependencies]
fsqlite-types = { version = "0.1.1", path = "../fsqlite-types", default-features = false }
fsqlite-error = { workspace = true }
fsqlite-vfs = { version = "0.1.2", path = "../fsqlite-vfs", default-features = false }
fsqlite-pager = { workspace = true }
fsqlite-wal = { workspace = true }
fsqlite-mvcc = { workspace = true }
fsqlite-observability = { workspace = true }
fsqlite-btree = { workspace = true }
fsqlite-ast = { workspace = true }
fsqlite-parser = { workspace = true }
fsqlite-planner = { workspace = true }
fsqlite-vdbe = { workspace = true }
fsqlite-func = { workspace = true }
fsqlite-ext-json = { workspace = true }
fsqlite-ext-fts5 = { workspace = true }
fsqlite-ext-icu = { workspace = true }
fsqlite-ext-misc = { workspace = true }
tracing = { workspace = true }
xxhash-rust = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hashbrown.workspace = true
lru.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
asupersync = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "symbol_ops"
harness = false
