[package]
name = "fsqlite-ext-fts5"
version = "0.1.1"
description = "FTS5 full-text search extension"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-func = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
