[package]
name = "fsqlite-ext-json"
version = "0.1.1"
description = "JSON1 functions and virtual tables"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-func = { workspace = true }
serde_json = { workspace = true }
json5 = "0.4"

[lints]
workspace = true
