[package]
name = "fsqlite-ext-misc"
version = "0.1.1"
description = "Miscellaneous extensions: generate_series, carray, dbstat, dbpage"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-func = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
