[package]
name = "fsqlite-ext-misc"
version = "0.1.2"
description = "Miscellaneous extensions: generate_series, carray, dbstat, dbpage"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-func = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true
