[package]
name = "fsqlite-ext-rtree"
version = "0.1.1"
description = "R-tree and geopoly spatial index extension"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }

[lints]
workspace = true
