[package]
name = "fsqlite-ext-session"
version = "0.1.1"
description = "Session, changeset, and patchset extension"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }

[lints]
workspace = true
