[package]
name = "fsqlite-func"
version = "0.1.1"
description = "Built-in scalar, aggregate, and window functions"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
