[package]
name = "fsqlite-harness"
version = "0.1.0"
publish = false
description = "Conformance test runner and golden file comparison"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
asupersync.workspace = true
fsqlite = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-types = { workspace = true }
fsqlite-vfs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
xxhash-rust = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
blake3 = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
trybuild = "1.0"
fsqlite-ast = { workspace = true }
fsqlite-btree = { workspace = true }
fsqlite-core = { workspace = true }
fsqlite-ext-json = { workspace = true }
fsqlite-ext-fts5 = { workspace = true }
fsqlite-ext-fts3 = { workspace = true }
fsqlite-ext-rtree = { workspace = true }
fsqlite-ext-session = { workspace = true }
fsqlite-ext-icu = { workspace = true }
fsqlite-ext-misc = { workspace = true }
fsqlite-func = { workspace = true }
fsqlite-mvcc = { workspace = true }
fsqlite-pager = { workspace = true }
fsqlite-parser = { workspace = true }
fsqlite-planner = { workspace = true }
fsqlite-types = { workspace = true }
fsqlite-vdbe = { workspace = true }
fsqlite-wal = { workspace = true }

[lints]
workspace = true
