[package]
name = "fsqlite-pager"
version = "0.1.1"
description = "Page cache and journal management"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
foldhash = "0.1"
smallvec = { version = "1.13.2", features = ["const_generics", "union", "const_new"] }
fsqlite-types = { path = "../fsqlite-types", version = "0.1" }
fsqlite-error = { path = "../fsqlite-error", version = "0.1" }
fsqlite-vfs = { workspace = true }
xxhash-rust = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
hashbrown.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parking_lot = { workspace = true }

[dev-dependencies]
asupersync.workspace = true
proptest = { workspace = true }
tempfile = { workspace = true }
blake3 = { workspace = true }

[lints]
workspace = true
