[package]
name = "fsqlite-pager"
version = "0.1.2"
description = "Page cache and journal management"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["native"]
native = ["fsqlite-types/native", "fsqlite-vfs/native", "fsqlite-wal/native"]
wasm = ["fsqlite-types/wasm", "fsqlite-vfs/wasm", "fsqlite-wal/wasm"]
linux-asupersync-uring = ["fsqlite-vfs/linux-asupersync-uring"]
fault-injection = ["fsqlite-wal/fault-injection"]

[dependencies]
foldhash = "0.1"
smallvec = { version = "1.13.2", features = ["const_generics", "union", "const_new"] }
fsqlite-types = { path = "../fsqlite-types", version = "0.1", default-features = false }
fsqlite-error = { path = "../fsqlite-error", version = "0.1" }
fsqlite-vfs = { path = "../fsqlite-vfs", version = "0.1.3", default-features = false }
fsqlite-wal = { path = "../fsqlite-wal", version = "0.1.2", default-features = false }
xxhash-rust = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
hashbrown.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parking_lot = { workspace = true }

[dev-dependencies]
asupersync.workspace = true
proptest = { workspace = true }
tempfile = { workspace = true }
blake3 = { workspace = true }
fsqlite-wal = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
