[package]
name = "fsqlite-parser"
version = "0.1.1"
description = "Hand-written recursive descent SQL parser"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-ast = { workspace = true }
memchr = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
